<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/noFavorite"
                android:layout_width="@dimen/dimen30"
                android:layout_height="@dimen/dimen30"
                android:layout_gravity="right"
                android:padding="@dimen/dimen5"
                android:layout_marginRight="@dimen/dimen10"
                android:visibility="@{vm.getPostFavorite() ? View.GONE : View.VISIBLE}"
                android:background="@drawable/ic_star_border" />

            <Button
                android:id="@+id/favorite"
                android:layout_width="@dimen/dimen30"
                android:layout_height="@dimen/dimen30"
                android:layout_gravity="right"
                android:padding="@dimen/dimen5"
                android:layout_marginRight="@dimen/dimen10"
                android:visibility="@{vm.getPostFavorite() ? View.VISIBLE : View.GONE}"
                android:background="@drawable/ic_star" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/titleDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5"
            android:paddingLeft="@dimen/dimen10"
            android:paddingRight="@dimen/dimen10"
            android:text="@string/description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/dimenSp18"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/post_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5"
            android:paddingLeft="@dimen/dimen10"
            android:paddingRight="@dimen/dimen10"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleDescription"
            app:mutableText="@{vm.getPostTitle()}" />

        <TextView
            android:id="@+id/post_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5"
            android:paddingLeft="@dimen/dimen10"
            android:paddingRight="@dimen/dimen10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_title"
            app:mutableText="@{vm.getPostBody()}" />

        <TextView
            android:id="@+id/titleUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5"
            android:paddingLeft="@dimen/dimen10"
            android:paddingRight="@dimen/dimen10"
            android:text="@string/user"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/dimenSp18"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/post_body" />

        <TextView
            android:id="@+id/titleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5"
            android:paddingLeft="@dimen/dimen10"
            android:paddingRight="@dimen/dimen10"
            android:text="@string/name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/dimenSp14"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleUser" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5"
            android:paddingLeft="@dimen/dimen10"
            android:paddingRight="@dimen/dimen10"
            android:text="@{vm.getUser().name}"
            app:layout_constraintLeft_toRightOf="@id/titleName"
            app:layout_constraintTop_toBottomOf="@id/titleUser"
            tools:text="Nombre" />

        <TextView
            android:id="@+id/titleEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5"
            android:paddingLeft="@dimen/dimen10"
            android:paddingRight="@dimen/dimen10"
            android:text="@string/email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/dimenSp14"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleName" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5"
            android:paddingLeft="@dimen/dimen10"
            android:paddingRight="@dimen/dimen10"
            android:text="@{vm.getUser().email}"
            app:layout_constraintLeft_toRightOf="@id/titleEmail"
            app:layout_constraintTop_toBottomOf="@id/titleName" />

        <TextView
            android:id="@+id/titlePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5"
            android:paddingLeft="@dimen/dimen10"
            android:paddingRight="@dimen/dimen10"
            android:text="@string/phone"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/dimenSp14"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleEmail" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5"
            android:paddingLeft="@dimen/dimen10"
            android:paddingRight="@dimen/dimen10"
            android:text="@{vm.getUser().phone}"
            app:layout_constraintLeft_toRightOf="@id/titlePhone"
            app:layout_constraintTop_toBottomOf="@id/titleEmail" />

        <TextView
            android:id="@+id/titleWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5"
            android:paddingLeft="@dimen/dimen10"
            android:paddingRight="@dimen/dimen10"
            android:text="@string/website"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/dimenSp14"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titlePhone" />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5"
            android:paddingLeft="@dimen/dimen10"
            android:paddingRight="@dimen/dimen10"
            android:text="@{vm.getUser().website}"
            app:layout_constraintLeft_toRightOf="@id/titleWebsite"
            app:layout_constraintTop_toBottomOf="@id/titlePhone" />

        <TextView
            android:id="@+id/commentsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20"
            android:background="@color/colorPrimary"
            android:paddingLeft="@dimen/dimen15"
            android:paddingRight="@dimen/dimen15"
            android:text="@string/comments"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/titleWebsite" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commentsList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:adapter="@{vm.getCommentsListAdapter()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commentsTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.carlostorres.poststest.view.posts.viewmodels.PostViewModel" />
    </data>

</layout>